--- a/styles/_.css
+++ b/styles/_.css
@@ -1,176 +1,175 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-size: 18px;
-    background: rgb(236, 236, 236);
-    font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-bottom: 25px;
+  font-size: 18px;
+  background: rgb(236, 236, 236);
+  font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+  padding-bottom: 25px;
 }
 
 #title {
-    color: rgb(0, 111, 185);
-    text-align: center;
-    font-size: 75px;
+  color: rgb(0, 111, 185);
+  text-align: center;
+  font-size: 75px;
 }
 
 .wrapper {
-    padding-top: 70px;
-    display: flex;
-    flex-wrap: wrap-reverse;
-    justify-content: center;
+  padding-top: 70px;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
 }
 
-.column-one {
-    flex: .7;
+#task_wrapper {
+  flex: 0.7;
 }
 
-#task {
-    width: 600px;
-    margin: 0 auto;
+#taskWrapper__tasks {
+  width: 600px;
+  margin: 0 auto;
 }
 
-.task__item {
-    border: .4px solid rgb(0, 0, 0);
-    background: #6253ae;
-    border-radius: 10px;
-    height: 102px;
-    margin: 18px;
-    padding: 8px 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+#taskWrapperTasks__item {
+  border: 0.4px solid rgb(0, 0, 0);
+  background: #6253ae;
+  border-radius: 10px;
+  height: 102px;
+  margin: 18px;
+  padding: 8px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.task__item__header {
-    display: flex;
-    justify-content: space-between;
+#taskWrapperTasksItem__header {
+  display: flex;
+  justify-content: space-between;
 }
 
-.task__item__header > .task__item__title {
-    color: white;
+#taskWrapperTasksItem__header > h3 {
+  color: white;
 }
 
-.task__item__header > .task__item__time {
-    font-style: italic;
-    font-weight: 600;
-    letter-spacing: 1.5px;
-    color: rgba(126, 237, 255, 0.65);
-    font-size: 15px;
+#taskWrapperTasksItem__header > p {
+  font-style: italic;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  color: rgba(126, 237, 255, 0.65);
+  font-size: 15px;
 }
 
 .action_button_group {
-    text-align: right;
+  text-align: right;
 }
 
 .action_button_group > button {
-    padding: 5px 10px;
-    font-size: 14px;
-    letter-spacing: 1.2px;
-    border: .1px solid black;
-    border-radius: 5px;
-    outline: none;
-    transition: font-size .3s ease, box-shadow .2s ease;
+  padding: 5px 10px;
+  font-size: 14px;
+  letter-spacing: 1.2px;
+  border: 0.1px solid black;
+  border-radius: 5px;
+  outline: none;
+  transition: font-size 0.3s ease, box-shadow 0.2s ease;
 }
 
 .action_button_group > button:hover {
-    box-shadow: 0px 0px 7px 1.1px rgba(230, 167, 231, 0.5);
-    font-size: 14.5px;
+  box-shadow: 0px 0px 7px 1.1px rgba(230, 167, 231, 0.5);
+  font-size: 14.5px;
 }
 
 .abg__edit_btn {
-    background: rgb(162, 162, 162);
-    transition: background .3s ease;
+  background: rgb(162, 162, 162);
+  transition: background 0.3s ease;
 }
 
 .abg__edit_btn:hover {
-    background: rgb(191, 183, 183);
+  background: rgb(191, 183, 183);
 }
 
 .abg__complete_btn {
-    background: rgba(97, 152, 114, .9);
-    transition: background .3s ease;
+  background: rgba(97, 152, 114, 0.9);
+  transition: background 0.3s ease;
 }
 
 .abg__complete_btn:hover {
-    background: rgba(97, 165, 119, 1);
+  background: rgba(97, 165, 119, 1);
 }
 
 .abg__delete_btn {
-    background: rgba(184, 119, 119, .9);
-    transition: background .3s ease;
+  background: rgba(184, 119, 119, 0.9);
+  transition: background 0.3s ease;
 }
 
 .abg__delete_btn:hover {
-    background: rgb(192, 115, 115);
+  background: rgb(192, 115, 115);
 }
 
 #add_task_btn {
-    position: fixed;
-    right: 50%;
-    bottom: 10px;
-    width: 80px;
-    border-radius: 50%;
-    border: 2px solid rgb(162, 143, 255);
-    background: rgb(36, 241, 104);
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
-    font-weight: bolder;
-    color: #b37b03;
-    padding-bottom: .5rem;
-    cursor: pointer;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+  position: fixed;
+  right: 50%;
+  bottom: 10px;
+  width: 80px;
+  border-radius: 50%;
+  border: 2px solid rgb(162, 143, 255);
+  background: rgb(36, 241, 104);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  font-weight: bolder;
+  color: #b37b03;
+  padding-bottom: 0.5rem;
+  cursor: pointer;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 #add_task_btn:hover {
-    border: .9px solid rgb(162, 143, 255);
-    background: rgb(0, 202, 67);
-    font-size: 53px;
-    color: #ffffff;
+  border: 0.9px solid rgb(162, 143, 255);
+  background: rgb(0, 202, 67);
+  font-size: 53px;
+  color: #ffffff;
 }
 
 .column-two {
-    width: 500px;
-    margin: 0 auto;
-    padding-top: 3%;
+  width: 500px;
+  margin: 0 auto;
+  padding-top: 3%;
 }
 
 #calendar {
-    font-size: 14px;
-    font-weight: 600;
+  font-size: 14px;
+  font-weight: 600;
 }
 
+@media (max-width: 720px) {
+  #taskWrapper__tasks {
+    width: 100vw;
+  }
 
-@media (max-width: 720px){
-    #task {
-        width: 100vw;
-    }
+  #taskWrapperTasksItem__header > h3 {
+    font-size: 18px;
+  }
 
-    .task__item__header > .task__item__title {
-        font-size: 18px;
-    }
+  #add_task_btn {
+    width: 60px;
+    right: 74%;
+    bottom: 3px;
+    font-size: 35px;
+  }
 
-    #add_task_btn {
-        width: 60px;
-        right: 74%;
-        bottom: 3px;
-        font-size: 35px;
-    }
+  #add_task_btn:hover {
+    font-size: 38px;
+  }
 
-    #add_task_btn:hover {
-        font-size: 38px;
-    }
-
-    .column-two {
-        padding: 3% 8px;
-    }
+  .column-two {
+    padding: 3% 8px;
+  }
 }
