--- a/assets/styles/_.css
+++ b/assets/styles/_.css
@@ -17,8 +17,10 @@ body {
   font-size: 75px;
 }
 
-.hide {
-  visibility: hidden;
+.show {
+  visibility: visible !important;
+  opacity: 1 !important;
+  transition: all 0.5s ease-in-out !important;
 }
 
 .input {
@@ -127,7 +129,7 @@ stylings for action buttons for creating, editing, completing and deleting a tas
   background: rgb(192, 115, 115);
 }
 
-#add_task_btn {
+.open_add_task_modal--css {
   position: fixed;
   right: 50%;
   bottom: 10px;
@@ -147,7 +149,7 @@ stylings for action buttons for creating, editing, completing and deleting a tas
   transition: all 0.4s ease;
 }
 
-#add_task_btn:hover {
+.open_add_task_modal--css:hover {
   border: 0.9px solid rgb(162, 143, 255);
   background: rgb(0, 202, 67);
   font-size: 53px;
@@ -175,14 +177,14 @@ stylings for action buttons for creating, editing, completing and deleting a tas
     font-size: 18px;
   }
 
-  #add_task_btn {
+  .open_add_task_modal--css {
     width: 60px;
     right: 74%;
     bottom: 3px;
     font-size: 35px;
   }
 
-  #add_task_btn:hover {
+  .open_add_task_modal--css:hover {
     font-size: 38px;
   }
 
@@ -192,20 +194,23 @@ stylings for action buttons for creating, editing, completing and deleting a tas
 }
 
 /* Stylings for form to add a task  */
-#add_task_wrapper {
+#add_task_modal {
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
+  opacity: 0;
   width: 100%;
   height: 100vh;
-  z-index: 1;
   display: flex;
-  justify-content: center;
   padding: 18px;
+  justify-content: center;
   background: rgba(47, 47, 47, 0.9);
+  transition: all 0.7s ease-in-out;
 }
 
-#addTaskWrapper__task_form {
+#addTaskModal__task_form {
   width: 900px;
   height: 500px;
   border-radius: 5px;
@@ -216,7 +221,35 @@ stylings for action buttons for creating, editing, completing and deleting a tas
   text-align: center;
 }
 
-#addTaskWrapper__task_form form input[type="submit"] {
+#close_add_task_modal--lg {
+  cursor: pointer;
+  border: 0.5px solid rgba(253, 145, 145, 0.6);
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+  background: #ffdada;
+  color: #f90000;
+  position: relative;
+  top: -81px;
+  left: -49px;
+}
+
+#close_add_task_modal--sm {
+  cursor: pointer;
+  font-size: 16px;
+  text-decoration: underline;
+  color: #131313a6;
+  display: block;
+  margin: 10px;
+  visibility: hidden;
+}
+
+#addTaskModal__task_form form input[type="submit"] {
   margin-top: 16px;
   padding: 16px;
   outline: none;
@@ -230,21 +263,28 @@ stylings for action buttons for creating, editing, completing and deleting a tas
   transition: all 0.4s ease;
 }
 
-#addTaskWrapper__task_form form input[type="submit"]:hover {
+#addTaskModal__task_form form input[type="submit"]:hover {
   background: #2c8c34d0;
 }
 
-#addTaskWrapper__task_form h1 {
+#addTaskModal__task_form h1 {
   color: rgb(0, 111, 185);
-  padding-bottom: 16px;
 }
 
-#addTaskWrapperTaskForm__fields div {
+#addTaskModalTaskForm__fields div {
   margin: 12px 0;
 }
 
 @media screen and (max-width: 720px) {
-  #addTaskWrapper__task_form {
+  #addTaskModal__task_form {
     height: 100%;
+  }
+
+  #close_add_task_modal--lg {
+    visibility: hidden;
+  }
+
+  #close_add_task_modal--sm {
+    visibility: visible;
   }
 }
