--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,10 +2,8 @@
   --white-color: #f8f8f8;
   --black-color: #000;
   --purple-color: #4f0097;
-  --blue-color: #132056;
   --green-color: #0e3f10;
   --red-color: #3f0e0e;
-
 }
 
 * {
@@ -30,10 +28,6 @@
   background-color: var(--green-color);
 }
 
-.bg-blue {
-  background-color: var(--blue-color);
-}
-
 .bg-red {
   background-color: var(--red-color)
 }
@@ -44,25 +38,46 @@ body {
   padding-bottom: 25px;
 }
 
-.show {
-  visibility: visible !important;
-  opacity: 1 !important;
-  transition: all 0.5s ease-in-out !important;
+.hide {
+  display: none !important;
 }
 
-.input {
+.my-input {
   width: 50%;
-  min-width: 280px;
-  padding: 16px 10px;
+  padding: 8px;
   outline: none;
   font-size: 16px;
-  border-radius: 8px;
+  min-width: 180px;
+  border-radius: 4px;
   border: 0.6px solid rgba(40, 40, 40, 0.3);
+}
+
+.my-form-group {
+  margin-top: 18px;
+}
+
+[type="submit"] {
+  outline: none;
+  font-size: 18px;
+  padding: 12px;
+  border-radius: 2px;
+  color: var(--purple-color);
+  background-color: transparent;
+  border: .5px solid var(--purple-color);
+  transition: background-color .2s ease-in;
+}
+
+[type="submit"]:hover {
+  background-color: var(--purple-color);
+  color: var(--white-color);
+  cursor: pointer;
 }
 
 .space-bar {
   padding-top: 100px;
 }
+
+
 
 
 /* Navigation bar styles */
@@ -240,6 +255,46 @@ a.card-tag {
 
 
 /**
+  Task add modal styles
+**/
+#new-task-modal {
+  top: 80px;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding: 39px;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  background-color: #000000;
+}
+
+
+#nwt_form-wrap {
+  width: 800px;
+  padding: 18px;
+  border-radius: 4px;
+  height: max-content;
+  background-color: var(--white-color);
+}
+
+#close-task-modal {
+  font-size: 16px;
+  padding: 12px;
+  text-align: right;
+  border-radius: 2px;
+  text-decoration: none;
+  border: .5px solid var(--red-color);
+  width: fit-content;
+  height: fit-content;
+  color: var(--black-color);
+}
+
+
+
+
+
+/**
   Responsive styles
 */
 
@@ -280,5 +335,17 @@ a.card-tag {
   .card-btns > button {
     font-size: 13px !important;
     margin: 2px 0;
+  }
+
+  #new-task-modal {
+    padding: 0;
+    display: block;
+  }
+
+  #nwt_form-wrap {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    overflow-y: scroll;
   }
 }
