--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,6 +36,44 @@
   background-color: var(--red-color)
 }
 
+.msg {
+  width: 60%;
+  margin: 0 auto;
+  font-size: 16px;
+  padding: 14px 10px;
+  border-radius: 5px;
+  font-style: italic;
+  min-width: fit-content;
+}
+
+.note {
+  margin-bottom: 18px;
+}
+
+.error-msg {
+  color: #ff4d4d;
+  background-color: #ff4d4d59;
+}
+
+.success-msg {
+  color: #32ff32;
+  background-color: #42ff4270;;
+}
+
+#success-msg-note {
+  text-align: center;
+}
+
+.close-msg-btn {
+  font-size: 12;
+  color: #ffffff;
+  padding: 4px 8px;
+  border-radius: 5px;
+  background-color: #000000;
+  text-align: left !important;
+  text-decoration: none;
+}
+
 body {
   font-size: 18px;
   font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
@@ -357,6 +395,7 @@ a.card-tag {
   #nwt_form-wrap {
     width: 100%;
     height: 100%;
+    padding: 18px 18px 98px 18px;
     border-radius: 0;
     overflow-y: scroll;
   }
