Fix undefined displayed in DOM and color combination of success msg

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -60,8 +60,8 @@ a {
 }
 
 .success-msg {
-  color: #32ff32;
-  background-color: #42ff4270;;
+  color: #00ff00;
+  background-color: #448644;;
 }
 
 .close-msg-btn {
