--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,7 +77,7 @@ a {
 body {
   font-size: 18px;
   font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
-  padding-bottom: 25px;
+  /* padding-bottom: 25px; */
 }
 
 .hide {
